inserting social share buttons

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "product-oversee-theme",
   "description": "Escrevemos para colaborar, experimentar e provocar a busca por novos pontos de vista, impulsionando o pensamento crítico.",
-  "version": "1.0.14",
+  "version": "1.0.15",
   "engines": {
     "ghost": ">=4.0.0",
     "ghost-api": "v4"
@@ -95,6 +95,11 @@
         "type": "boolean",
         "group": "post",
         "default": false
+      },
+      "single_social_float_buttons": {
+        "type": "boolean",
+        "group": "post",
+        "default": true
       },
       "sidebar_banner": {
         "type": "boolean",
